syntax = "proto3";

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";

package trellis.core;

message TimestampedMessage
{
  google.protobuf.Timestamp timestamp = 1;
  google.protobuf.Any payload = 2;
}
